@@ -30,6 +30,10 @@ all-local: $(PGM) $(TMPINSTALL_FILES)
 
 EXTRA_DIST = bspstart.c linkcmds
 
+${PROJECT_RELEASE}/lib/$(dirstamp):
+	@$(mkdir_p) ${PROJECT_RELEASE}/lib
+	@: > ${PROJECT_RELEASE}/lib/$(dirstamp)
+
 ${PROJECT_RELEASE}/lib/linkcmds: linkcmds ${PROJECT_RELEASE}/lib/$(dirstamp)
 	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/linkcmds
 TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/linkcmds
